# calculadora-3d

./: .gitignore  CHANGELOG.md  CREAR_APK_FACILMENTE.md  CREAR_APK_MANUAL.txt  Calculadora3D_Pro.apk  GUIA_DISTRIBUCION_APK.md  INSTALL_APK.md  INSTRUCCIONES_FINALES_APK.md  LICENSE  PROJECT_SUMMARY.md  README.md  README_APK.md  README_GITHUB.md  SOLUCION_APK_FINAL.md  SOLUCION_FINAL.md  analytics.json  arreglar_gradle.py  budgets.json  build_apk.py  build_apk_debug.py  build_apk_definitivo.py  build_apk_final.py  build_apk_optimizado.py  build_apk_simple.py  clients.json  compilar_apk_ahora.py  config.py  crear_release.py  crear_repo_github.md  create_apk_alternative.py  create_icon.py  demo.py  demo_analytics.json  demo_budgets.json  demo_clients.json  demo_materials.json  demo_printers.json  demo_projects.json  demo_tasks.json  demo_transactions.json  (+23 more)
assets/: styles.css
docs/: informe_sistema.md
models/: database.py  database_mobile.py  database_simple.py  settings_manager.py  user_preferences.py
tests/: test_modules.py
utils/: accessibility.py  advanced_reports.py  analytics.py  animations.py  auth.py  backup_utils.py  budget_manager.py  client_manager.py  cost_optimizer.py  export_utils.py  help_system.py  i18n.py  import_utils.py  integrations.py  material_manager.py  notifications.py  printer_manager.py  project_manager.py  reports.py  search_filter.py  sound_effects.py  system_overview.py  task_manager.py  templates.py  themes.py  updater.py  validation.py  visual_effects.py
views/: calculator_view.py  calculator_view_mobile.py  clients_view.py  (+8 more)
(+5 files in other folders)
